# gr-latency

./: .gitignore  .zenodo.json  CMakeLists.txt  MANIFEST.md  conda-forge.yml
.ci_support/: win_64_python3.11.____cpython.yaml
.conda/: README.md
.conda/recipe/: meta.yaml
.github/workflows/: check-formatting.yml  conda-build.yml  run-test.yml
apps/: CMakeLists.txt
cmake/Modules/: latencyConfig.cmake
docs/: CMakeLists.txt  README.md
docs/doxygen/: CMakeLists.txt  Doxyfile.in  swig_doc.py
examples/: .gitignore  stream_timestamp_demo.grc  tag_timestamp_demo.grc
grc/: CMakeLists.txt  latency_pdu_time_stamper.block.yml  latency_stream_time_stamper.block.yml  latency_tag_timestamp_debug.block.yml
include/latency/: CMakeLists.txt  api.h  pdu_time_stamper.h  stream_time_stamper.h  tag_timestamp_debug.h
lib/: CMakeLists.txt  pdu_time_stamper_impl.cc  pdu_time_stamper_impl.h  stream_time_stamper_impl.cc  stream_time_stamper_impl.h  tag_timestamp_debug_impl.cc  tag_timestamp_debug_impl.h
python/: CMakeLists.txt  __init__.py  latency_analysis.py  qa_pdu_time_stamper.py  qa_stream_time_stamper.py  qa_tag_timestamp_debug.py  utils.py
python/bindings/: CMakeLists.txt  bind_oot_file.py  pdu_time_stamper_python.cc  python_bindings.cc  stream_time_stamper_python.cc  tag_timestamp_debug_python.cc
python/bindings/docstrings/: pdu_time_stamper_pydoc_template.h  stream_time_stamper_pydoc_template.h  tag_timestamp_debug_pydoc_template.h
recipe/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml
swig/: CMakeLists.txt  latency_swig.i
(+6 files in other folders)
